# worldcup-2026-model

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
dashboard/: dashboard.html
docs/: architecture_audit.md  decisions.md  handoff.md  handoff_2026-06-15.md  market_map.md  strategy_v2.md  technical_record.md
paper_trading/: README.md  calibration_log.csv  portfolio.json  trade_log.md
reports/: backtest_strategy_20260616T031232Z.csv  backtest_strategy_20260616T031232Z.md  cross_market_check.md  derived_calibration_20260624T023151Z.md  derived_calibration_20260624T034227Z.md  derived_calibration_20260624T233433Z.md  derived_calibration_20260625T033715Z.md  derived_calibration_20260626T010105Z.md  derived_calibration_20260626T235556Z.md  derived_calibration_20260628T005304Z.md  derived_calibration_20260628T125158Z.md  derived_calibration_20260628T131311Z.md  derived_calibration_20260629T011514Z.md  market_inventory.md
scripts/: 01_fetch_results.py  02_compute_elo.py  03_load_wc_structure.py  04_build_team_features.py  05_build_training_matrix.py  06_fit_poisson.py  07_sanity_check_predictions.py  08_fit_dixon_coles.py  09_backtest_world_cups.py  10_run_simulation.py  11_diagnose_predictions.py  12_explore_transfermarkt.py  13_build_squad_value_history.py  14_verify_value_merge.py  15_audit_value_history.py  16_diagnose_merge_dtype.py  17_rebuild_team_features_parquet.py  18_elo_gap_calibration.py  19_model_card.py  20_temperature_recalibration.py  21_contract_pricing.py  22_kalshi_discover.py  23_map_model_vs_market.py  24_scan_arbitrage.py  README.md  (+12 more)
(+56 files in other folders)
